# Yolo_mark

./: .gitignore  CMakeLists.txt  linux_mark.sh  main.cpp
x64/Release/data/: train.txt
